# ASP-Lab4-6-Backup

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/net/: connection.rs  connection_thread.rs  event.rs  mod.rs  monitoring.rs  server.rs  server_stop.rs
backend/src/net/msg/: message.rs  message_factory.rs  messages.rs  mod.rs  msgs.rs
backend/test/: performance_test.rs
frontend/: Cargo.toml
frontend/src/: chat_client.html  main.rs
frontend/src/net/: client.rs  connection.rs  messages.rs  mod.rs
src/: connection_thread.rs  main.rs  server.rs
src/net/: mod.rs  server.rs
