[package]
name = "rust_chat_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.72"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }